logs/test_jit_out.txt
   Compiling tracea v0.1.0 (E:\Projects\Tracea)
warning: unused import: `crate::emitter::CUDAEmitter`
 --> src\interface\python.rs:4:5
  |
4 | use crate::emitter::CUDAEmitter;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::emitter::jit::JITCompiler`
 --> src\interface\python.rs:5:5
  |
5 | use crate::emitter::jit::JITCompiler;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `PyRefMut` and `PyRef`
 --> src\interface\python.rs:6:12
  |
6 | use pyo3::{PyRef, PyRefMut};
  |            ^^^^^  ^^^^^^^^

warning: unused imports: `LaunchAsync` and `LaunchConfig`
 --> src\interface\python.rs:8:45
  |
8 | use cudarc::driver::{CudaDevice, CudaSlice, LaunchAsync, LaunchConfig};
  |                                             ^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused import: `cudarc::nvrtc::Ptx`
 --> src\interface\python.rs:9:5
  |
9 | use cudarc::nvrtc::Ptx;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `slf`
  --> src\interface\python.rs:94:22
   |
94 |     pub fn profiling(slf: &Bound<'_, Self>) -> PyResult<PyProfilingScope> {
   |                      ^^^ help: if this is intentional, prefix it with an underscore: `_slf`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `m`
   --> src\interface\python.rs:206:5
    |
206 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it with an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:206:13
    |
206 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:206:21
    |
206 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: unused variable: `epilogue`
   --> src\interface\python.rs:207:5
    |
207 |     epilogue: PyEpilogueOp,
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_epilogue`

warning: unused variable: `device`
   --> src\interface\python.rs:208:5
    |
208 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `m`
   --> src\interface\python.rs:221:5
    |
221 |     m: u32, n: u32, k: u32,
    |     ^ help: if this is intentional, prefix it with an underscore: `_m`

warning: unused variable: `n`
   --> src\interface\python.rs:221:13
    |
221 |     m: u32, n: u32, k: u32,
    |             ^ help: if this is intentional, prefix it with an underscore: `_n`

warning: unused variable: `k`
   --> src\interface\python.rs:221:21
    |
221 |     m: u32, n: u32, k: u32,
    |                     ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: unused variable: `device`
   --> src\interface\python.rs:222:5
    |
222 |     device: String
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `device`
  --> src\interface\cpp.rs:12:9
   |
12 |     let device = c_str.to_str().unwrap_or("A100").to_string();
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_device`

warning: unused variable: `row`
  --> src\semantic\mapping.rs:20:28
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_row`

warning: unused variable: `col`
  --> src\semantic\mapping.rs:20:38
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                                      ^^^ help: if this is intentional, prefix it with an underscore: `_col`

error[E0597]: `arch` does not live long enough
  --> src\emitter\jit.rs:56:24
   |
53 |         let arch = format!("compute_{}", compute_cap);
   |             ---- binding `arch` declared here
...
56 |             arch: Some(&arch),
   |                   -----^^^^^-
   |                   |    |
   |                   |    borrowed value does not live long enough
   |                   this usage requires that `arch` is borrowed for `'static`
...
94 |     }
   |     - `arch` dropped here while still borrowed

error[E0521]: borrowed data escapes outside of method
  --> src\emitter\jit.rs:81:9
   |
37 |     pub fn compile_cuda(&self, source: &str, kernel_name: &str) -> Result<CudaFunction, String> {
   |                                              -----------  - let's call the lifetime of this reference `'1`
   |                                              |
   |                                              `kernel_name` is a reference that is only valid in the method body
...
81 |         self.device.load_ptx(ptx, &module_name, &function_names)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         `kernel_name` escapes the method body here
   |         argument requires that `'1` must outlive `'static`

error[E0597]: `arch` does not live long enough
   --> src\emitter\jit.rs:113:24
    |
110 |         let arch = format!("compute_{}", actual_compute_cap);
    |             ---- binding `arch` declared here
...
113 |             arch: Some(&arch),
    |                   -----^^^^^-
    |                   |    |
    |                   |    borrowed value does not live long enough
    |                   this usage requires that `arch` is borrowed for `'static`
...
139 |     }
    |     - `arch` dropped here while still borrowed

error[E0521]: borrowed data escapes outside of method
   --> src\emitter\jit.rs:129:9
    |
 96 |     pub fn compile_cuda_with_opt(&self, source: &str, kernel_name: &str, compute_cap: Option<u32>) -> Result<CudaFunction, String> {
    |                                                       -----------  - let's call the lifetime of this reference `'1`
    |                                                       |
    |                                                       `kernel_name` is a reference that is only valid in the method body
...
129 |         self.device.load_ptx(ptx, &module_name, &function_names)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |         |
    |         `kernel_name` escapes the method body here
    |         argument requires that `'1` must outlive `'static`

warning: unused variable: `kernel1`
   --> src\emitter\jit.rs:206:13
    |
206 |         let kernel1 = jit.compile_cuda(&kernel_src, "vector_add").expect("First compilation failed");
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_kernel1`

warning: unused variable: `kernel2`
   --> src\emitter\jit.rs:209:13
    |
209 |         let kernel2 = jit.compile_cuda(&kernel_src, "vector_add").expect("Second compilation failed");
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_kernel2`

warning: unused variable: `kernel3`
   --> src\emitter\jit.rs:213:13
    |
213 |         let kernel3 = jit.compile_cuda(other_src, "test").expect("Third compilation failed");
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_kernel3`

Some errors have detailed explanations: E0521, E0597.
For more information about an error, try `rustc --explain E0521`.
warning: `tracea` (lib test) generated 22 warnings
error: could not compile `tracea` (lib test) due to 4 previous errors; 22 warnings emitted
